<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eDriveModeOfOperation" Id="{357fc553-50d4-4739-9d95-cfa392d1d853}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eDriveModeOfOperation :
(
	ProfilePositionMode				:= 1,
	VelocityCtrMode    				:= 2,
	ProfileVelocityMode 	   	    := 3,
	TorqueVelocityMode 				:= 4,
	HomingMode				    	:= 6,
	InterpolationPosMode			:= 7,
	CyclicSyncMode					:= 8,
	CyclicSyncVelocity				:= 9,
	CyclicSyncTorque				:= 10
	
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>