<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="enumMotionObject" Id="{116eabec-e960-41db-a4cb-fb1dfdcd027e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE enumMotionObject :
(
	OPERATION_MODE := 1,	
	VEL_KI,
	VEL_KP,
	TORQUE_OFFSET,
	MAX_TORQUE,
	GAIN_SCHEDULE,
	ACC_CLOSE_POS_ERR,
	DC_VOLATAGE
	
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>