<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="VelocityCtrl_Param_typ" Id="{653911fc-f919-4370-8ba8-31cbdd5a0cb6}">
    <Declaration><![CDATA[TYPE VelocityCtrl_Param_typ : 	
	STRUCT  (*parameter structure*)
		
		CyclicVelocity : LREAL;
		CyclicVelocityCorrection : REAL;
		CyclicTorque : LREAL;		
		Acceleration : LREAL := 1000000;
		Deceleration : LREAL := 2000000;
		SctrlKp 	 : LREAL  ; // 1/1000
		SctrlKi 	 : LREAL;	// 1/1000
		TorqueMode: eTorqueMode;
		ThreadName		: STRING[20]; 
		
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>