<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="VelocityCtrl_Status_typ" Id="{9ec2c226-dadb-4f49-a844-6aa02bf4327d}">
    <Declaration><![CDATA[TYPE VelocityCtrl_Status_typ : 	
	STRUCT 
		Done	   : BOOL;
		SctrlInitialized : BOOL;
		UpdateTorqueDone : BOOL;
		Busy       : BOOL;
		CommandAborted : BOOL;
		Active : BOOL ;
		InStopVelCtrl : BOOL ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>